apps/routers/talos-related-routes/talos-dev-webhook/talos-dev-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: talos-dev-public-http
  namespace: traefik-staging
spec:
  ports:
    - name: talos-dev-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: talos-dev-public-http
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.13.242
  ports:
  - port: 80
    name: talos-dev-http
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: talos-dev-public-https
#   namespace: traefik-staging
# spec:
#   ports:
#     - name: talos-dev-https
#       protocol: TCP
#       port: 443
#       targetPort: 443
#       nodePort: 0
# ---
# kind: Endpoints
# apiVersion: v1
# metadata:
#   name: talos-dev-public-https
#   namespace: traefik-staging
# subsets:
# - addresses:
#   - ip: 10.17.13.242
#   ports:
#   - port: 443
#     name: talos-dev-https
